<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container_info"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.info.InfoFragment">

  <CheckBox
    android:id="@+id/favorite_checkbox"
    style="?android:attr/starStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginStart="4dp"
    app:layout_constraintStart_toEndOf="@id/name_value"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/name_value"
    style="@style/header_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


  <TextView
    android:id="@+id/gender"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/gender"
    app:layout_constraintEnd_toStartOf="@id/gender_value"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/name_value" />

  <TextView
    android:id="@+id/gender_value"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/gender"
    app:layout_constraintTop_toBottomOf="@id/name_value" />


  <TextView
    android:id="@+id/height"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/height"
    app:layout_constraintEnd_toStartOf="@id/height_value"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/gender_value" />

  <TextView
    android:id="@+id/height_value"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/height"
    app:layout_constraintTop_toBottomOf="@id/gender_value" />


  <TextView
    android:id="@+id/weight"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/weight"
    app:layout_constraintEnd_toStartOf="@id/weight_value"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/height_value" />

  <TextView
    android:id="@+id/weight_value"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/weight"
    app:layout_constraintTop_toBottomOf="@id/height_value" />


  <TextView
    android:id="@+id/birt_year"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/birt_year"
    app:layout_constraintEnd_toStartOf="@id/birt_year_value"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/weight_value" />

  <TextView
    android:id="@+id/birt_year_value"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/birt_year"
    app:layout_constraintTop_toBottomOf="@id/weight_value" />


  <TextView
    android:id="@+id/skin_color"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/skin_color"
    app:layout_constraintEnd_toStartOf="@id/skin_color_value"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/birt_year_value" />

  <TextView
    android:id="@+id/skin_color_value"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/skin_color"
    app:layout_constraintTop_toBottomOf="@id/birt_year_value" />


  <TextView
    android:id="@+id/eye_color"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/eye_color"
    app:layout_constraintEnd_toStartOf="@id/eye_color_value"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/skin_color_value" />

  <TextView
    android:id="@+id/eye_color_value"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/eye_color"
    app:layout_constraintTop_toBottomOf="@id/skin_color_value" />


  <TextView
    android:id="@+id/hair_color"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/hair_color"
    app:layout_constraintEnd_toStartOf="@id/hair_color_value"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/eye_color_value" />

  <TextView
    android:id="@+id/hair_color_value"
    style="@style/body_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/hair_color"
    app:layout_constraintTop_toBottomOf="@id/eye_color_value" />


  <TextView
    android:id="@+id/films"
    style="@style/header_style"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/films"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/hair_color_value" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycler_films"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/films" />


</androidx.constraintlayout.widget.ConstraintLayout>